fixed overlapping divs on list of post

--- a/src/App.css
+++ b/src/App.css
@@ -111,3 +111,8 @@ h3 {
   margin: 5px;
   text-decoration: none;
 }
+
+.postlist-main {
+  padding-bottom: 50px;
+  width: 100%;
+}
